# CourseAssis

./: README.md
app/: .coverage  README.md  data.db  main.py  pyproject.toml
app/app/: data.db  main.py
app/app/patterns/: data_storage_factory.py  factory_method.py  recommendation_strategy.py  study_plan_template.py  userData_template.py  user_data_template.py
app/app/security/: db.key  db_security.py
app/app/static/css/: style.css
app/app/static/js/: recommendations.js
app/app/templates/: index.html
app/app/tests/: test_api.py  test_study_plan.py  test_user_data.py
app/data/: db.sqlite  db.sqlite-shm  db.sqlite-wal
