[tool.poetry]
name = "app"
version = "0.1.0"
description = "Aplicação para coleta de dados do usuário"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12,<4.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
langchain = "^0.3.14"
python-dotenv = "^1.0.1"
openai = "^1.59.7"
requests = "^2.32.3"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
